# fossdev

./: .gitignore  Makefile  PracticeMakefile  README.md  docker-compose.yaml  pyproject.toml
file_exchanger/docs/: ContextDiagram.drawio
linux-as-execenv/: pinger.py
order_service/: Dockerfile  Makefile  pyproject.toml
product_service/: Dockerfile  Makefile  pyproject.toml
testing/src/: math.py  math_demo.py
testing/tests/: test_math.py  test_principles.py
testing_tdd/: requirements.txt  setup.py
testing_tdd/src/: ndfl.py
testing_tdd/tests/: test_ndfl_basic.py
